<resources>
    <string name="app_name">Veg4u</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="do_not_have_an_account">Do not have an account ?</string>
    <string name="first_slide">Choose Your products</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="third_slide">Good Service</string>
    <string name="first_desc">ASDf</string>
    <string name="second_desc">QWErt</string>
    <string name="third_desc">ZXCVVb</string>
    <string name="desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="lets_get_started">Lets get started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="see_all">See All</string>
    <string name="new_products">All Products</string>
    <string name="we_provide_best_products">We provide best products.</string>
    <string name="popular_products">Popular Products</string>
    <string name="phone_no">Phone No.</string>
    <string name="address">Address</string>
    <string name="title_activity_seller_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="choose_a_category">Choose a Category:</string>
    <string name="add_category">ADD CATEGORY</string>
    <string name="update">UPDATE</string>
    <string name="title_activity_buyer_dashboard">MainActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>