<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.merokisanbazar.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/seller_home_fragment" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.merokisanbazar.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.merokisanbazar.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_Logout"
        android:name="com.example.merokisanbazar.ui.sLogout.LogoutFragment"
        android:label="Logout"
        tools:layout="@layout/fragment_logout" />
</navigation>