<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bggg"
    android:gravity="center"
    tools:context=".ui.notifications.NotificationsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_person_24"
                android:layout_marginTop="90dp"
                android:layout_height="100dp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_bg"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:hint="@string/name"
                android:padding="15dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:drawableStart="@drawable/ic_baseline_account_circle"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_margin="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:hint="@string/phone_no"
                android:inputType="number"
                android:padding="15dp" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:drawableStart="@drawable/ic_baseline_location_on_24"
                android:drawablePadding="10dp"
                android:elevation="3dp"
                android:hint="@string/address"
                android:padding="15dp" />

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/green"
                android:padding="15dp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>