<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggg"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/sign_up"
        android:textColor="@color/light_green"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/etRegisterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/name"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent=".8" />


    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_account_circle"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterName"
        app:layout_constraintWidth_percent=".8" />


    <EditText
        android:id="@+id/etRegisterPhone"
        android:layout_width="335dp"
        android:layout_height="62dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/phone_no"
        android:inputType="number"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterEmail" />

    <EditText
        android:id="@+id/etResiterAddress"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/address"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterPhone" />


    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etResiterAddress"
        app:layout_constraintWidth_percent=".8" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterPassword">

        <RadioButton
            android:id="@+id/rbBuyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Buyer" />

        <RadioButton
            android:id="@+id/rbSeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Seller" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:onClick="signUp"
        android:padding="15dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent=".4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/already_have_an_account"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etRegisterPassword"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="@+id/etRegisterPassword"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signIn"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>